--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "next": "15.1.3",
+    "next-themes": "^0.4.4",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^19.0.0",
